--- a/TzalemTmuna/App.config
+++ b/TzalemTmuna/App.config
@@ -5,6 +5,11 @@
             <section name="TzalemTmuna.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
+    <connectionStrings>
+        <add name="TzalemTmuna.Properties.Settings.tzalemtmunaConnectionString"
+            connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\tzalemtmuna.mdb"
+            providerName="System.Data.OleDb" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
