--- a/TzalemTmuna/Properties/Settings.settings
+++ b/TzalemTmuna/Properties/Settings.settings
@@ -20,5 +20,13 @@
     <Setting Name="passwordForgotPassword" Type="System.String" Scope="User">
       <Value Profile="(Default)">changeme</Value>
     </Setting>
+    <Setting Name="tzalemtmunaConnectionString" Type="(Connection string)" Scope="Application">
+      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
+&lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
+  &lt;ConnectionString&gt;Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\tzalemtmuna.mdb&lt;/ConnectionString&gt;
+  &lt;ProviderName&gt;System.Data.OleDb&lt;/ProviderName&gt;
+&lt;/SerializableConnectionString&gt;</DesignTimeValue>
+      <Value Profile="(Default)">Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\tzalemtmuna.mdb</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
