--- a/TzalemTmuna/TzalemTmuna.csproj
+++ b/TzalemTmuna/TzalemTmuna.csproj
@@ -113,6 +113,14 @@
       <DependentUpon>SettingsAdmin.cs</DependentUpon>
     </Compile>
     <Compile Include="SqlServerTypes\Loader.cs" />
+    <Compile Include="tzalemtmunaDataSet.cs">
+      <DependentUpon>tzalemtmunaDataSet.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="tzalemtmunaDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>tzalemtmunaDataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="Utilities\IMouseBoundable.cs" />
     <Compile Include="Entities\Report.cs" />
     <Compile Include="Entities\LoginUser.cs" />
@@ -341,6 +349,10 @@
     <EmbeddedResource Include="Forms\ProfileThumbnail.resx">
       <DependentUpon>ProfileThumbnail.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="PrintableReports\commentsPrintableReport.rdlc" />
+    <EmbeddedResource Include="PrintableReports\postsPrintableReport.rdlc" />
+    <EmbeddedResource Include="PrintableReports\reportsPrintableReport.rdlc" />
+    <EmbeddedResource Include="PrintableReports\usersPrintableReport.rdlc" />
     <EmbeddedResource Include="Properties\Light.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <SubType>Designer</SubType>
@@ -355,7 +367,6 @@
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <EmbeddedResource Include="Report1.rdlc" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>PublicSettingsSingleFileGenerator</Generator>
@@ -366,6 +377,17 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="tzalemtmunaDataSet.xsc">
+      <DependentUpon>tzalemtmunaDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="tzalemtmunaDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>tzalemtmunaDataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="tzalemtmunaDataSet.xss">
+      <DependentUpon>tzalemtmunaDataSet.xsd</DependentUpon>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -464,6 +486,9 @@
     <None Include="Resources\lightAlert.png" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="tzalemtmuna.mdb">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <None Include="Resources\tico.ico" />
     <None Include="Resources\lightCommentReport.png" />
     <None Include="Resources\lightNoContentReport.png" />
@@ -485,7 +510,6 @@
     <Content Include="SqlServerTypes\x86\SqlServerSpatial140.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="tzalemtmunaicon2_T8a_icon.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
